--- a/templates/selenium_base.html
+++ b/templates/selenium_base.html
@@ -17,9 +17,9 @@ $:sele_render.selenium_header()
 	    
 		<div class="sphinxsidebar">
 			<div class="sphinxsidebarwrapper">
-			$if content_dict['context']:
+			$if content_dict['side']:
 				<h3>Table Of Contents</h3>
-				$:content_dict['context']
+				$:content_dict['side']
 			$if content_dict['previous_link'] and content_dict['previous_title']:
 		  		<h4>上一个主题</h4>
 		     	<p class="topless">
@@ -50,7 +50,7 @@ $:sele_render.selenium_header()
 	  	<div class="clear"></div>
 	</div>
 	
-	$:content_dict['content']
+	$:content_dict['body']
   
 	<div class="related">
 		<h3>导航</h3>
