--- a/templates/selenium_header.html
+++ b/templates/selenium_header.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/css/pygments.css" type="text/css">
     <link rel="stylesheet" href="/static/css/jquery.treeview.css" type="text/css">
     <link rel="stylesheet" href="/static/css/docs.css" type="text/css">
-    <script type="text/javascript" src="/static/js//page-tools.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/static/js/page-tools.js" type="text/javascript"></script>
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
