create lang files

--- a/templates/selenium_footer.html
+++ b/templates/selenium_footer.html
@@ -36,6 +36,10 @@
     </ul>
     <a href="http://openqa.org/"><img alt="openqa.org logo" id="footerLogo" src="/static/openqa-logo.png"></a>
 </div>
-
+<div style="clear:both;"></div>
+<div style="clear:both;" align="center">
+	<script src="http://s9.cnzz.com/stat.php?id=5385992&web_id=5385992&show=pic" language="JavaScript"></script>
+	<a href="http://www.miibeian.gov.cn" target="_blank">京ICP备12050610号-3</a>
+</div>
 </body>
 </html>
