--- a/templates/selenium_footer.html
+++ b/templates/selenium_footer.html
@@ -33,13 +33,16 @@
                 <li><a href="http://www.seleniumhq.org/about/getting-involved.html">Getting Involved</a></li>
             </ul>
         </li>
+        <li><a href="http://five3.github.io/testdoc/" target="_blank">github上参加本项目</a></li>
     </ul>
     <a href="http://openqa.org/"><img alt="openqa.org logo" id="footerLogo" src="/static/openqa-logo.png"></a>
 </div>
+<span id="scrolltop" onclick="window.scrollTo('0','0')" style="right: 50px;" title="回顶部">回顶部</span>
 <div style="clear:both;"></div>
 <div style="clear:both;" align="center">
 	<script src="http://s9.cnzz.com/stat.php?id=5385992&web_id=5385992&show=pic" language="JavaScript"></script>
 	<a href="http://www.miibeian.gov.cn" target="_blank">京ICP备12050610号-3</a>
+	
 </div>
 </body>
 </html>
