--- a/templates/selenium_footer.html
+++ b/templates/selenium_footer.html
@@ -33,7 +33,12 @@
                 <li><a href="http://www.seleniumhq.org/about/getting-involved.html">Getting Involved</a></li>
             </ul>
         </li>
-        <li><a href="http://five3.github.io/testdoc/" target="_blank">github上参加本项目</a></li>
+        <li><a href="http://five3.github.io/testdoc/" target="_blank">github上参加本项目</a>
+            <ul>
+                <li><a href="mailto:five3@163.com">文档勘误联系</a></li>
+                <li><a href="https://github.com/five3/testdoc/issues" target="_blank">在线提交问题</a></li>
+            </ul>        	
+        </li>
     </ul>
     <a href="http://openqa.org/"><img alt="openqa.org logo" id="footerLogo" src="/static/openqa-logo.png"></a>
 </div>
