addd baidu verify info

--- a/templates/selenium_header.html
+++ b/templates/selenium_header.html
@@ -2,7 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Selenium 中文文档</title>    
+	<meta name="baidu-site-verification" content="skkfWbd9LQ" />
+    <title>Selenium2.0 在线中文文档</title>   
+    <meta name="keywords" content="selenium2.0中文文档,selenium2.0中文API,selenium python,selenium java, selenium RC,selenium Grid,Selenium IDE, 中文文档, 中文手册">
+    <meta name="description" content="Selenium2.0中文文档,翻译了selenium2.0的官方文档，selenium2.0官方API，发表selenium2.0的技术、原理、实践等知识"> 
 	<link rel="shortcut icon" href="http://www.seleniumhq.org/selenium-favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="icon" href="http://www.seleniumhq.org/selenium-favicon.ico" type="image/vnd.microsoft.icon">	
 	<link rel="stylesheet" href="/static/css/seleniumhq.css" type="text/css">
