--- a/templates/selenium_base.html
+++ b/templates/selenium_base.html
@@ -1,5 +1,5 @@
 $def with (content_dict)
-$:sele_render.selenium_header()
+$:sele_render.selenium_header(content_dict['page_title'])
 <div id="mBody">
 	<div id="side" class="left">
 	    <div class="related">
