--- a/templates/selenium_doc.html
+++ b/templates/selenium_doc.html
@@ -18,7 +18,7 @@ $:sele_render.selenium_header(content_dict['page_title'])
 		<div class="sphinxsidebar">
 			<div class="sphinxsidebarwrapper">
 			$if content_dict['side']:
-				<h3>Table Of Contents</h3>
+				<h3>内容列表</h3>
 				$:content_dict['side']
 			$if content_dict['previous_link'] and content_dict['previous_title']:
 		  		<h4>上一个主题</h4>
