--- a/static/css/seleniumhq.css
+++ b/static/css/seleniumhq.css
@@ -530,6 +530,12 @@ th
 		color: #c00;
 	}
 
+pre span{
+		display:block;
+		width:310px;
+		height:32px;
+		}
+
 /* Computers - General */
 
 	pre.screen {
