更新首页导航

--- a/templates/selenium_doc.html
+++ b/templates/selenium_doc.html
@@ -5,7 +5,7 @@ $:sele_render.selenium_header(content_dict['page_title'])
 	    <div class="related">
 	      <h3>导航</h3>
 	      <ul>
-	        <li><a href="/seleniumdoc/">Selenium 文档主页</a> »</li>
+	        <li><a href="/selenium/doc/">Selenium 文档主页</a> »</li>
 	        <li class="right" style="margin-right: 10px">
 	        $if content_dict['previous_link']:	        	
 	        	<a href="$:content_dict['previous_link']" title="$:content_dict['previous_title']" accesskey="P">向前</a> | 
