--- a/testdoc/templates/base.html
+++ b/testdoc/templates/base.html
@@ -17,6 +17,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
     <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/static/css/blog.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/static/css/style.css" rel="stylesheet">
     {% block css %}{% endblock %}
@@ -24,15 +25,41 @@
     {% block js %}{% endblock %}
 </head>
 <body role="document">
-{% block header %}{% endblock %}
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="blog-nav">
+          <a class="blog-nav-item active" href="/">首页</a>
+          <a class="blog-nav-item" href="/groups">小组</a>
+          <a class="blog-nav-item" href="/ask">问答</a>
+          <a class="blog-nav-item" href="/article">文章</a>
+          <a class="blog-nav-item" href="/about">关于</a>
+        </nav>
+      </div>
+    </div>
 
-{% block main %}
-<h1>test</h1>
+<div class="container">
+{% block header %}
+
 {% endblock %}
+{% block main %}
+
+{% endblock %}
+    <!-- Site footer -->
+    <footer class="footer">
+    <hr>
+    <p>© testdoc 2015</p>
+    </footer>
+</div> <!-- /container -->
 
 {% block footer %}
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/ie-emulation-modes-warning.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 {% endblock %}
 {% block bottom %}{% endblock %}
 </body>
