--- a/testdoc/static/css/style.css
+++ b/testdoc/static/css/style.css
@@ -42,7 +42,11 @@ body {
   float: left;
   margin-top: 5px;
 }
-
+.marketing .gsitem {
+  width: 25%;
+  float: left;
+  margin-top: 5px;
+}
 .marketing .desc {
   height: 60px;
   text-align: left;
@@ -55,3 +59,403 @@ body {
 .footer {margin-top: 40px; }
 
 .item_title { background-image: -webkit-linear-gradient(top,#008B57 0,#008B57 100%); }
+
+#nav-right li:hover { background-color : #008B57; }
+
+.main-title {
+  margin: 30px 0 25px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.btn-primary { border-color: #008b57;
+  background-color: #009a61;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background-image: -webkit-linear-gradient(top, #009a61 0%, #00905b 100%);
+  background-image: -o-linear-gradient(top, #009a61 0%, #00905b 100%);
+  background-image: linear-gradient(to bottom, #009a61 0%, #00905b 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF009A61', endColorstr='#FF00905B', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
+.btn-primary:hover {
+  background-color: #008b57;
+  background-position: 0 -15px;
+}
+.nav-tabs-zen>li>a {
+  color: #333;
+}
+
+.pagination>.active>a, .pagination>.active>a:hover, .pagination>.active>a:focus, .pagination>.active>span, .pagination>.active>span:hover, .pagination>.active>span:focus {
+  z-index: 2;
+  color: #fff;
+  background-color: #008E59;
+  border-color: #008E59;
+  cursor: default;
+}
+
+.pagination>li>a, .pagination>li>span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  line-height: 1.5;
+  text-decoration: none;
+  color: #008E59;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  margin-left: -1px;
+}
+
+.blog-stream .stream-list__item {
+  padding: 12px 0;
+}
+.stream-list__item {
+  margin: 0;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
+}
+.blog-rank {
+  float: left;
+  margin-right: 12px;
+  padding-right: 12px;
+  border-right: 1px solid #f3f3f3;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.2;
+  color: #666;
+}
+.blog-rank .votes {
+  margin-bottom: 8px;
+  background: #f0f0f0;
+}
+.blog-rank .plus {
+  background: #009a61;
+  color: #fff;
+}
+.blog-rank .votes, .blog-rank .views {
+  display: block;
+  padding-top: 3px;
+  width: 40px;
+  height: 40px;
+  -moz-border-radius: 1px;
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+}
+.blog-rank .views {
+  color: #999;
+}
+.blog-rank small {
+  display: block;
+  font-size: 12px;
+}
+.stream-list__item .summary {
+  overflow: auto;
+  overflow-x: hidden;
+}
+.stream-list__item .title {
+  display: inline;
+  margin: 0 5px 0 0;
+  font-size: 16px;
+}
+.stream-list__item .title a:visited {
+  font-weight: 400;
+}
+.stream-list__item .title a {
+  color: #333;
+}
+.stream-list__item .excerpt {
+  margin: 5px 0 0;
+  height: 42px;
+  color: #777;
+  font-size: 13px;
+  line-height: 1.6;
+  overflow: hidden;
+}
+.wordbreak {
+  word-break: break-all;
+}
+
+.blog-stream .stream-list__item .author {
+  margin-top: 5px;
+}
+.stream-list__item .author {
+  margin-bottom: 5px;
+  color: #999;
+  font-size: 13px;
+}
+.list-inline {
+  margin-left: -5px;
+}
+.list-unstyled, .list-inline {
+  padding-left: 0;
+  list-style: none;
+}
+.list-inline>li {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.blog-stream .stream-list__item .author a {
+  color: #009a61;
+}
+.avatar-20 {
+  width: 20px;
+  height: 20px;
+  float:left;
+}
+[class*="avatar-"] {
+  border-radius: 2px;
+}
+.mr10, .mr-10 {
+  margin-right: 10px;
+}
+img {
+  vertical-align: middle;
+}
+img {
+  border: 0;
+}
+.mt30, .mt-30 {
+  margin-top: 30px;
+}
+.widget-welcome {
+  margin-bottom: 25px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  color: #666;
+  -moz-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+  -webkit-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+  box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+}
+.widget-welcome .title {
+  margin: 0 0 10px;
+  color: #D0021B;
+}
+h4, .h4 {
+  font-size: 20px;
+}
+.widget-welcome ul {
+  margin: 15px 0 0;
+}
+.list-unstyled, .list-inline {
+  padding-left: 0;
+  list-style: none;
+}
+.widget-welcome li {
+  margin-top: 6px;
+}
+[class*="btn-sn-"], [class*="btn-sn-"]:hover, [class*="btn-sn-"]:active, [class*="btn-sn-"]:focus {
+  border: none;
+  color: #fff;
+}
+.btn-sn-google {
+  background: #4285F4;
+}
+.btn-sn-weibo {
+  background: #E90D24;
+}
+[class*="btn-sn-"] [class*="icon-sn-"] {
+  background-color: transparent;
+}
+[class*="icon-sn-"] {
+  display: inline-block;
+  background-image: url(/static/images/themes/icon-sn.png);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-background-size: auto 20px;
+  -o-background-size: auto 20px;
+  -webkit-background-size: auto 20px;
+  background-size: auto 20px;
+}
+.icon-sn-google {
+  background-color: #4285F4;
+  background-position: 0px 0;
+}
+.icon-sn-weibo {
+  background-color: #E90D24;
+  background-position: -40px 0;
+}
+.widget-box {
+  margin: 25px 0;
+  padding-top: 25px;
+  border-top: 1px solid #eee;
+}
+.widget-box .widget-box__title {
+  margin: 0 0 20px;
+  font-size: 16px;
+}
+.media:first-child {
+  margin-top: 0;
+}
+.widget-user {
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  margin-top: 0;
+}
+.media, .media .media {
+  margin-top: 15px;
+}
+.media, .media-body {
+  overflow: hidden;
+  zoom: 1;
+}
+.media>.pull-left {
+  margin-right: 10px;
+}
+.pull-left {
+  float: left !important;
+}
+.pull-left {
+  float: left;
+}
+.avatar-40 {
+  width: 40px;
+  height: 40px;
+}
+[class*="avatar-"] {
+  border-radius: 2px;
+}
+.media-object {
+  display: block;
+}
+img {
+  vertical-align: middle;
+}
+a {
+  color: #008E59;
+  text-decoration: none;
+}
+.taglist--inline, .taglist--block {
+  list-style: none;
+  padding: 0;
+  font-size: 0;
+}
+.taglist--block>li {
+  margin-bottom: 8px;
+}
+.taglist--inline li, .taglist--block li {
+  padding: 0;
+  font-size: 13px;
+}
+.mb10, .mb-10 {
+  margin-bottom: 10px;
+}
+.tag {
+  display: inline-block;
+  padding: 0 8px;
+  color: #017e66;
+  background-color: #E7F2ED;
+  height: 24px;
+  line-height: 24px;
+  font-weight: normal;
+  font-size: 13px;
+  text-align: center;
+}
+.taglist--inline.multi>li {
+  margin-bottom: 5px;
+}
+.taglist--inline>li {
+  display: inline-block;
+  margin-right: 5px;
+}
+.taglist--inline li, .taglist--block li {
+  padding: 0;
+  font-size: 13px;
+}
+.widget-links__item {
+  margin-bottom: 8px;
+}
+.widget-links__item a {
+  margin-right: 6px;
+  word-break: break-word;
+}
+.widget-links__item small {
+  display: inline-block;
+  font-size: 13px;
+}
+.text-muted {
+  color: #777;
+}
+.qa-rank, .bookmark-rank {
+  float: left;
+  margin-right: 5px;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.2;
+  color: #666;
+}
+.qa-rank .votes, .bookmark-rank .votes, .qa-rank .answers, .bookmark-rank .answers, .qa-rank .views, .bookmark-rank .views {
+  display: inline-block;
+  padding-top: 3px;
+  width: 40px;
+  height: 40px;
+  -moz-border-radius: 1px;
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+}
+.qa-rank .answered, .bookmark-rank .answered {
+  background-color: #009a61;
+  color: #fff;
+}
+.qa-rank small, .bookmark-rank small {
+  display: block;
+  font-size: 12px;
+}
+.qa-rank .answers, .bookmark-rank .answers {
+  background-color: #AD3A37;
+  color: #fff;
+}
+.qa-rank .answered, .bookmark-rank .answered {
+  background-color: #009a61;
+  color: #fff;
+}
+.qa-rank .views, .bookmark-rank .views {
+  width: 50px;
+  color: #999;
+}
+.ib.taglist--inline, .ib.taglist--block {
+  margin: 0;
+  display: inline-block;
+}
+.stream-list__item .author a {
+  color: #999;
+}
+.global-nav .logo {
+  float: left;
+  margin: 0;
+  display: inline-block;
+}
+h1, .h1 {
+  font-size: 25px;
+}
+.global-nav .logo a.sf {
+  display: block;
+  height: 54px;
+  width: 161px;
+  background: url(/static/images/themes/logo-w.svg) no-repeat left center;
+  -moz-background-size: 161px auto;
+  -o-background-size: 161px auto;
+  -webkit-background-size: 161px auto;
+  background-size: 161px auto;
+  text-indent: 110%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-transform: capitalize;
+}
+.global-nav .logo a {
+  text-decoration: none;
+  float: left;
+}
+.qa-rank .minus, .bookmark-rank .minus {
+  color: #AD3A37;
+}
+.qa-rank .plus, .bookmark-rank .plus {
+  color: #009a61;
+}
