--- a/testdoc/static/css/style.css
+++ b/testdoc/static/css/style.css
@@ -459,3 +459,325 @@ h1, .h1 {
 .qa-rank .plus, .bookmark-rank .plus {
   color: #009a61;
 }
+.wrap {
+  padding-bottom: 30px;
+  position: relative;
+}
+.post-topheader {
+  padding: 15px 0;
+  background: #f6f6f6;
+}
+.post-topheader .breadcrumb {
+  margin: 0 0 10px;
+  padding: 0;
+  background-color: transparent;
+}
+.breadcrumb>li {
+  font-size: 13px;
+}
+.breadcrumb>li {
+  display: inline-block;
+}
+.breadcrumb>li>a {
+  color: #333;
+}
+.breadcrumb>.active {
+  color: #777;
+}
+.post-topheader .title {
+  margin: 0;
+}
+.post-topheader .title a, .post-topheader .title a:hover, .post-topheader .title a:active {
+  color: #333;
+  text-decoration: none;
+}
+.post-topheader .author {
+  margin-top: 10px;
+  color: #999;
+}
+.mr5, .mr-5 {
+  margin-right: 5px;
+}
+.avatar-24 {
+  width: 24px;
+  height: 24px;
+}
+[class*="avatar-"] {
+  border-radius: 2px;
+}
+.mr10, .mr-10 {
+  margin-right: 10px;
+}
+.black, .text-black {
+  color: #333;
+}
+.post-topheader .widget-action--ver {
+  margin-top: 10px;
+}
+.widget-action--ver {
+  color: #999;
+}
+.widget-action--ver li:first-child {
+  margin-top: 0;
+}
+.widget-action--ver button {
+  margin-right: 8px;
+  min-width: 58px;
+}
+.widget-action--ver li:first-child {
+  margin-top: 0;
+}
+.widget-action--ver strong {
+  color: #333;
+}
+.widget-action--ver li {
+  margin-top: 12px;
+}
+.post-col {
+  float: left;
+  width: 36px;
+  position: relative;
+}
+.widget-vote {
+  position: relative;
+  width: 36px;
+  height: 54px;
+  line-height: 54px;
+  font-size: 18px;
+  background: #f3f3f3;
+  color: #666;
+  text-align: center;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+.widget-vote .like {
+  top: 0;
+  height: 36px;
+}
+.widget-vote button {
+  position: absolute;
+  left: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  width: 100%;
+  background: transparent url(/static/images/themes/vote-bg@2x.png) 0 0 no-repeat;
+  -moz-background-size: auto 54px;
+  -o-background-size: auto 54px;
+  -webkit-background-size: auto 54px;
+  background-size: auto 54px;
+}
+.widget-vote .hate {
+  bottom: 0;
+  height: 18px;
+  background-position: 0 bottom;
+}
+.post-offset {
+  margin-left: 50px;
+}
+.fmt {
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 1.6;
+  word-wrap: break-word;
+}
+.mb20, .mb-20 {
+  margin-bottom: 20px;
+}
+.post-opt {
+  font-size: 13px;
+}
+.post-opt a {
+  color: #999;
+}
+h4, .h4, h5, .h5, h6, .h6 {
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
+}
+.editor-wrap .editor {
+  min-height: 88px;
+}
+.editor {
+  position: relative;
+  z-index: 1;
+  min-height: 300px;
+  overflow: hidden;
+  border: 1px solid #CCC;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+.widget-welcome {
+  margin-bottom: 25px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  color: #666;
+  -moz-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+  -webkit-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+  box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
+}
+.mt20, .mt-20 {
+  margin-top: 20px;
+}
+.widget-welcome.widget-welcome-question {
+  background: #fcf8e3;
+}
+.pull-right {
+  float: right !important;
+}
+.btn-group, .btn-group-vertical {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+.post-title {
+  padding-bottom: 15px;
+  border-bottom: 2px solid #ccc;
+}
+.widget-answers__item {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ddd;
+}
+.accepted-flag {
+  position: relative;
+  margin: 10px 0 0;
+  background-color: #009a61;
+  width: 100%;
+  height: 25px;
+  line-height: 35px;
+  font-size: 13px;
+  text-align: center;
+  color: #FFF;
+  z-index: 1;
+  -moz-border-radius: 2px 2px 0 0;
+  -webkit-border-radius: 2px;
+  border-radius: 2px 2px 0 0;
+}
+.widget-answers__item .post-offset {
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+.post-offset .avatar-24 {
+  float: right;
+}
+.widget-box:first-child, .widget-box.no-border {
+  margin-top: 0;
+  padding-top: 0;
+  border: none;
+}
+.fz16 {
+  font-size: 16px;
+}
+.pb20, .pb-20 {
+  padding-bottom: 20px;
+}
+.mb30, .mb-30 {
+  margin-bottom: 30px;
+}
+.border-bottom {
+  border-bottom: 1px solid #DDD;
+}
+.widget-outline .panel-heading {
+  cursor: initial;
+}
+.panel-heading {
+  padding: 10px 15px;
+  border-bottom: 1px solid transparent;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+}
+.panel-default>.panel-heading {
+  color: #333;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+}
+.widget-outline .panel-heading {
+  background-color: #FFF;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  padding: 8px 12px;
+  font-size: 16px;
+}
+.post-nav .panel-body {
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+  max-height: inherit;
+  padding: 0 0 10px;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.post-nav .nav-body {
+  position: relative;
+  padding: 0 12px;
+}
+.widget-outline .panel-body ul {
+  padding-left: 18px;
+  margin: 0;
+  list-style-type: square;
+}
+.pt30, .pt-30 {
+  padding-top: 30px;
+}
+.mb30, .mb-30 {
+  margin-bottom: 30px;
+}
+.mt40, .mt-40 {
+  margin-top: 40px;
+}
+.border-top {
+  border-top: 1px solid #DDD;
+}
+.post-comment-title {
+  padding-top: 20px;
+  border-top: 2px solid #ccc;
+  margin-bottom: 15px;
+}
+.widget-comments {
+  list-style: none;
+  margin: 0 0 15px;
+  font-size: 13px;
+  color: #666;
+  padding: 10px;
+  background-color: #F6F6F6;
+  border-radius: 2px;
+}
+blockquote {
+  padding: 10.5px 21px;
+  margin: 0 0 21px;
+  font-size: 14px;
+  border-left: 5px solid #eee;
+}
+.fmt blockquote {
+  border-color: #008E59;
+  color: #555;
+  font-size: 1em;
+}
+.fmt h1, .fmt h2, .fmt h3 {
+  margin: 28px 0 18px;
+}
+.fmt h1 {
+  padding-bottom: 8px;
+  font-size: 1.57143em;
+}
+.fmt h4, .fmt p, .fmt ul, .fmt ol, .fmt pre, .fmt blockquote, .fmt table {
+  margin: 18px 0;
+}
+.gsitem {  margin-top: 20px;}
+.gsitem img { margin:0 5px; }
+a:hover { color : #008E59; }
