--- a/testdoc/templates/article/article.html
+++ b/testdoc/templates/article/article.html
@@ -42,12 +42,12 @@
 
 <p><a rel="nofollow" href="http://segmentfault.com/a/1190000002957332">上一篇文章</a>，我们讲了如何创建一个工程，以及Android工程的一些基本概念，把工程创建出来后，我们看下文件目录结构，一个简单的工程结构如下。</p>
 
-<p><img src="/img/bVmzre" alt="clipboard.png" style="cursor: pointer;"><br>
+<p><img src="/static/upload/22.png" alt="clipboard.png" style="cursor: pointer;"><br>
 其实这个目录结构初次看还是挺让人心慌慌的。<br><code>Android</code>现在引入了一个构建系统叫做<a rel="nofollow" href="https://gradle.org/" target="_blank">Gradle</a>，你可以理解为一个C/C++里面的<code>Makefile</code> 或者是node里面的<code>gulp</code>。</p>
 
 <p><code>Android Studio</code>里面是分模块进行开发的，一个<code>app</code>可以只有一个模块，也可以有多个模块组成（比如一些自己开发的库）。如果我们的应用足够简单的话，那么就只有一个模块，<code>Android Studio</code>默认创建的模块就叫<code>app</code>，可以看见，文件夹旁边还有个小手机的标志，代表这是一个<code>Android Application</code>模块，而不是一个<code>Android Library</code>或者是其他模块。</p>
 
-<p>看看我们的代码应该放哪，我们把注意力集中在这个文件夹<br><img src="/img/bVmzry" alt="clipboard.png" style="cursor: pointer;"></p>
+<p>看看我们的代码应该放哪，我们把注意力集中在这个文件夹<br><img src="/static/upload/22.png" alt="clipboard.png" style="cursor: pointer;"></p>
 
 <p><code>src</code>是<code>source</code>的意思，也就是源码所在的目录，我们主要就是在这个文件夹里写东西。</p>
 
@@ -56,15 +56,15 @@
 <p>我们来看看，我们要的<code>Main</code>函数在哪里？<br>
 首先我们看<code>src/main</code>目录下的<code>AndroidManifest.xml</code>文件。</p>
 
-<p><img src="/img/bVmzrM" alt="clipboard.png" style="cursor: pointer;"></p>
+<p><img src="/static/upload/22.png" alt="clipboard.png" style="cursor: pointer;"></p>
 
 <p><code>AndroidManifest</code> 是描述App的一个最最重要的文件，一些内容的定义，主题的设置都在这里，如果熟悉<code>node</code>的朋友肯定知道<code>package.json</code>，一样一样的。</p>
 
-<p>我们看到下图，在AndroidManifest中，出现的<code>MAIN</code>和<code>LAUNCHER</code>字眼，<code>Activity</code>有了他们两个的描述，它就成了你点击app的icon启动的第一个<code>Activity</code>。<br><img src="/img/bVmzr5" alt="clipboard.png" style="cursor: pointer;"></p>
+<p>我们看到下图，在AndroidManifest中，出现的<code>MAIN</code>和<code>LAUNCHER</code>字眼，<code>Activity</code>有了他们两个的描述，它就成了你点击app的icon启动的第一个<code>Activity</code>。<br><img src="/static/upload/22.png" alt="clipboard.png" style="cursor: pointer;"></p>
 
 <p>在<code>src/main/java</code>文件夹中，找到<code>MainActivity</code>，打开，看见其中有一个<code>onCreate</code>的函数</p>
 
-<p><img src="/img/bVmzsr" alt="clipboard.png" style="cursor: pointer;"><br>
+<p><img src="/static/upload/22.png" alt="clipboard.png" style="cursor: pointer;"><br>
 顾名思义，这个函数是在这个<code>Activity</code>创建的时候调用的，它首先调用了下父类的onCreate方法（不可省略），然后调用了<code>setContentView</code>方法，这个方法是告诉Android系统：我用哪个布局文件去渲染这个<code>Activity</code>，好了，到这里一个入口的<code>Activity</code>就创建好了。</p>
 
 <p>注：在<code>Android</code>系统中，<code>Activity</code>类的对象不是用来给开发者直接去<code>new</code>的，它的生命周期<strong>由系统直接管控</strong>因为我们不参与控制<code>Activity</code>的生命周期，因此它在什么时候回调什么函数变得异常重要。学习编程最好的去处就是官方文档，如果想更加深入了解Android Activity生命周期的童鞋，我这里推荐看下官方对它的描述 传送门：<a rel="nofollow" href="http://developer.android.com/training/basics/activity-lifecycle/index.html" target="_blank">http://developer.android.com/training/basics/activity-lifecycle/index....</a></p>
